<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/vLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <LinearLayout
                    android:id="@+id/lyLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/vLine"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/detail_language"
                        android:textSize="12dp"/>

                    <TextView
                        android:id="@+id/tvLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyLicense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/lyLanguage"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/detail_license"
                        android:textSize="12dp"/>

                    <TextView
                        android:id="@+id/tvLicense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/lyLicense"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:id="@+id/ivOwner"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_owner"
                    app:layout_constraintBottom_toBottomOf="@+id/ivDate"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvOwner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="Google"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12dp"
                    app:layout_constraintStart_toEndOf="@id/ivOwner"
                    app:layout_constraintTop_toTopOf="@+id/ivOwner"
                    app:layout_constraintBottom_toBottomOf="@+id/ivOwner"/>

                <LinearLayout
                    android:id="@+id/lyCreated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/ivOwner"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/detail_created_at"
                        android:textSize="12dp"/>

                    <TextView
                        android:id="@+id/tvCreated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12dp"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lyUpdated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/lyCreated"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/detail_updated_at"
                        android:textSize="12dp"/>

                    <TextView
                        android:id="@+id/tvUpdated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyPushed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/lyUpdated"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/detail_pushed_at"
                        android:textSize="12dp"/>

                    <TextView
                        android:id="@+id/tvPushed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/lyPushed"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/detail_score"
                        android:textSize="16dp"/>

                    <TextView
                        android:id="@+id/tvScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyWatchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/lyScore"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/detail_watchers"
                        android:textSize="16dp"/>

                    <TextView
                        android:id="@+id/tvWatchers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"/>

                </LinearLayout>



            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

</android.support.constraint.ConstraintLayout>